# vx-mpp

./: CMakeLists.txt  README.md  e_component_DoStateSet  readme.txt
app/: CMakeLists.txt
app/include/: mpp_type.h  vx_log.h  vx_type.h
app/include/alsa/alsa/alsa/alsa/alsa/alsa/alsa/: config.h
app/include/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/: Makefile.in
app/include/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/: Makefile
app/include/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/sound/: Makefile
app/include/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/alsa/sound/uapi/: Makefile
app/include/alsa/alsa/alsa/alsa/alsa/alsa/sound/uapi/: Makefile.in
app/include/omx_il/: OMX_Core.h  OMX_Index.h  OMX_Types.h  OMX_Video.h
app/src/: CMakeLists.txt
app/src/base/: mpp_buffer.cpp  mpp_buffer_impl.cpp  omx_base_component.c  omx_base_filter.c  omx_base_port.c  omx_base_sink.c  omx_base_source.c  omx_base_video_port.c  vx_log.c
app/src/base/inc/: mpp_buffer_impl.h  omx_base_component.h
app/src/common/: common.c  omx_create_loaders_linux.c  omxcore.c  omxregister.c  st_static_component_loader.c
app/src/common/inc/: common.h  omx_comp_debug_levels.h  queue.h
app/src/components/alsa/: omx_alsasink_component.c  omx_alsasrc_component.c
app/src/components/av1/: CMakeLists.txt  library_entry_point.c  omx_videodec_component.c  omx_videoenc_component.c  omx_videoenc_component.h
app/src/components/kmssink/: CMakeLists.txt  library_entry_point.c  omx_drm.c  omx_drm.h  omx_kms_sink_component.c  omx_kms_sink_component.h
app/src/components/kmssink/drm/: dc_sw_tb_utils.h  drm_fourcc.h  vx_drm.h
app/src/components/vedec/: CMakeLists.txt  library_entry_point.c  omx_h26xdec_component.c  omx_h26xdec_component.h
app/src/components/vedec/vdec/: allegro_ioctl_reg.h  config.h  vdec.h
app/src/components/vedec/vdec/lib_assert/: al_assert.h
app/src/components/vedec/vdec/lib_common/: Allocator.h  BufCommon.h  BufferAPI.h  BufferHandleMeta.h  BufferMeta.h  BufferPictureMeta.h  BufferPixMapMeta.h  BufferSeiMeta.h  BufferStatisticsMeta.h  BufferStreamMeta.h  CodecHook.h  Error.h  FourCC.h  HDR.h  IDriver.h  MemDesc.h  Nuts.h  PicFormat.h  PixMapBuffer.h  Planes.h  Profiles.h  SEI.h  SliceConsts.h  StreamBuffer.h  StreamSection.h  VideoMode.h
app/src/components/vedec/vdec/lib_common_dec/: DecBuffers.h  DecCallbacks.h  DecDpbMode.h  DecInfo.h  DecOutputSettings.h  DecSynchro.h  IpDecFourCC.h
app/src/components/vedec/vdec/lib_decode/: DecSchedulerCpu.h  DecSettings.h  lib_decode.h
app/src/components/vedec/vdec/lib_fpga/: Board.h  DmaAlloc.h  DmaAllocLinux.h
app/src/components/vedec/vdec/lib_ip_ctrl/: IpCtrl.h
app/src/components/vedec/vdec/lib_rtos/: lib_rtos.h  types.h
app/src/osal/: mpp_allocator.c  mpp_allocator.cpp  mpp_allocator_impl.h  mpp_common.cpp  mpp_env.c  mpp_env.cpp  mpp_lock.cpp  mpp_log.cpp  mpp_mem.cpp  mpp_mem_pool.cpp  mpp_queue.cpp  mpp_runtime.cpp  mpp_thread.cpp  mpp_trace.cpp  os_env.h  os_mem.h
app/src/osal/allocator/: allocator_dma.c  allocator_dma.h  allocator_drm.c  allocator_drm.h  allocator_ion.c  allocator_ion.h  allocator_std.c  allocator_std.h
app/src/osal/android/: os_allocator.c  os_env.c  os_log.c  os_mem.c
app/src/osal/device/: dma_device.c
app/src/osal/inc/: mpp_allocator.h  mpp_buffer.h  mpp_callback.h  mpp_common.h  mpp_env.h  mpp_err.h  mpp_hash.h  mpp_list.h  mpp_lock.h  mpp_log.h  mpp_mem.h  mpp_mem_pool.h  mpp_queue.h  mpp_runtime.h  mpp_thread.h  mpp_trace.h
app/src/osal/linux/: os_allocator.c  os_env.c  os_log.c  os_log.cpp  os_mem.c
app/src/osal/windows/: os_allocator.c  os_env.c  os_log.c  os_mem.c
app/test/: CMakeLists.txt  main.c  mpp_buffer_test.c  mpp_dmabuffer_driver_test.c  mpp_env_test.c  mpp_log_test.c  mpp_mem_pool_test.c  mpp_mem_test.c  mpp_runtime_test.c  mpp_time_test.c  mpp_trace_test.c  vdec_kmssink_test.c  vdec_test.c
doc/: openmax.vsdx  soc 芯片框架发展.vsdx
driver/: CMakeLists.txt  mpp_core.c
driver/dmabuf/: mpp_dma_alloc.c  mpp_dmabuf.c  mpp_dmabuf.h
